--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <h1>RIANNE LORRAINE SARMIENTO</h1>
         <h2>Bachelor of Science in Information Technology in Mapua University - Makati</h2>
+        <img src="riannelorraine.jpeg">
     </body>  
 </html>
